<resources>
    <string name="app_name">Nature Collection</string>

    <string name="bottom_home_item">Accueil</string>
    <string name="bottmon_collection_item">Collection</string>
    <string name="bottmon_add_plant">Ajouter</string>

    <!--Page d'accueil-->
    <string name="home_page_title">A Découvrir</string>
    <string name="home_page_last_plant_section">Dernières plantes</string>

    <!--Page de  collection-->
    <string name="collection_page_title">Ma collection</string>

    <!--Page d'ajout de plante-->
    <string name="add_plant_page_title">Ajout d\'une plante</string>
    <string name="add_plant_page_upload_button">Charger image</string>
    <string name="add_plant_name_input">@string/item_plant_name</string>
    <string name="add_plant_page_description_input">@string/item_plant_Description</string>

    <string-array name="add_plant_page_grow_spinner_input">
        <item>Croissance: Lente</item>
        <item>Croissance: Moyenne</item>
        <item>Croissance: Rapide</item>
    </string-array>

    <string-array name="add_plant_page_water_spinner_input">
        <item>Consommation: Faible</item>
        <item>Consommation: Moyenne</item>
        <item>Consommation: Rapide</item>
    </string-array>

    <string name="add_plant_page_confirm_button">Confirmer</string>

    <!--  Fenetre Popup de details  -->
    <string name="popup_plant_name">Plant Name</string>
    <string name="popup_plant_description_title">Description</string>
    <string name="popup_plant_description_subtitle">Petite description</string>
    <string name="popup_plant_grow_title">Croissance</string>
    <string name="popup_plant_grow_subtitle">Lente</string>
    <string name="popup_plant_water_title">Consommation Eau</string>
    <string name="popup_plant_water_subtitle">Faible</string>


    <!--Plante costomisé-->
    <string name="item_plant_name">Nom de la plante</string>
    <string name="item_plant_Description">Description de la plante</string>

</resources>